--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph.xml"
@@ -9,7 +8,7 @@
     <fragment
         android:id="@+id/QuizFragment"
         android:name="com.rsschool.quiz.view.QuizFragment"
-        tools:layout="@layout/question_adapter">
+        tools:layout="@layout/fragment_quiz">
         <action
             android:id="@+id/action_QuizFragment_to_ResultFragment"
             app:destination="@id/ResultFragment"
@@ -17,16 +16,18 @@
             app:exitAnim="@android:anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
             app:popExitAnim="@anim/slide_out_left" />
+
+        <argument
+            android:name="quizFragmentArgs"
+            app:argType="com.rsschool.quiz.model.Questions" />
     </fragment>
 
     <fragment
         android:id="@+id/ResultFragment"
         android:name="com.rsschool.quiz.view.ResultFragment"
-        android:label="item_detail_adapter"
+        android:label="result_fragment"
         tools:layout="@layout/fragment_result">
-        <argument
-            android:name="detailFragmentArgs"
-            app:argType="com.rsschool.quiz.model.QuestionData" />
+
     </fragment>
 
 </navigation>
