--- a/app/src/main/res/layout/question_adapter.xml
+++ b/app/src/main/res/layout/question_adapter.xml
@@ -7,109 +7,89 @@
     android:fitsSystemWindows="true"
     tools:context=".view.QuizFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/detail_appbar"
-        android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:fitsSystemWindows="true"
-        app:liftOnScroll="true"
-        app:liftOnScrollTargetViewId="@id/detail_view_scroll_view">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/detail_collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:collapsedTitleTextAppearance="@style/TextAppearance.Toolbar.DetailTitle"
-            app:contentScrim="?attr/colorSurface"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:titleEnabled="true"
-            app:toolbarId="@id/detail_toolbar">
-
-            <ImageView
-                android:id="@+id/detail_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                tools:src="@drawable/ic_hockey"
-                android:scaleType="fitCenter"
-                app:layout_collapseMode="parallax"
-                tools:ignore="ContentDescription" />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/detail_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_up_button" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/detail_view_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp">
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_start_guideline"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="16dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_end_guideline"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="16dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_top_guideline"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="16dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/margin_bottom_guideline"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="16dp" />
+
 
             <TextView
-                android:id="@+id/subtitle_detail_text_view"
-                android:layout_width="match_parent"
+                android:id="@+id/question"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:textAllCaps="true"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                android:textColor="?attr/colorSecondaryVariant"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Subtitle" />
+                android:textSize="22sp"
+                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
+                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
+                app:layout_constraintTop_toTopOf="@id/margin_top_guideline"
+                tools:text="@string/question_1" />
 
-            <TextView
-                android:id="@+id/title_detail_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:textColor="?attr/colorOnPrimary"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/subtitle_detail_text_view"
-                tools:text="Title" />
-
-            <TextView
-                android:id="@+id/about_detail_text_view"
-                android:layout_width="match_parent"
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:textSize="20sp"
-                android:textColor="?attr/colorOnPrimary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_detail_text_view"
-                tools:text="@string/about_tennis" />
+                app:layout_constraintEnd_toEndOf="@id/margin_end_guideline"
+                app:layout_constraintStart_toStartOf="@id/margin_start_guideline"
+                app:layout_constraintTop_toBottomOf="@id/question">
 
+                <RadioButton
+                    android:id="@+id/option_one"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/answer_1_1" />
+
+                <RadioButton
+                    android:id="@+id/option_two"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/answer_1_2" />
+
+                <RadioButton
+                    android:id="@+id/option_three"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/answer_1_3" />
+
+                <RadioButton
+                    android:id="@+id/option_four"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:checked="true"
+                    tools:text="@string/answer_1_4" />
+
+                <RadioButton
+                    android:id="@+id/option_five"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/answer_1_5" />
+
+            </RadioGroup>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_favorite"
-        app:rippleColor="?attr/colorOnSecondary" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
